# scrapy-proxyhat

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/scrapy_proxyhat/: __init__.py  middleware.py
tests/: test_middleware.py
